Refactor and update code